
public enum SpotType {
    SMALL, MEDIUM, LARGE, ELECTRIC
}