public enum VehicleSize {
    SMALL, MEDIUM, LARGE
}